<resources>
    <string name="app_name">StoryLine</string>
    <string name="story_title">Title</string>
    <string name="story_author">Author</string>
    <string name="story_year">2317</string>
    <string name="story_time_to_read">Time to read  - 10 min</string>
    <string name="email">E-mail</string>
    <string name="add_to_quotes">Добавить в цитаты</string>
    <string name="share">Поделиться</string>
    <string name="auth">Войти</string>
    <string name="copy">Копировать</string>
    <string name="too_long_quote_message">Цитата слишком длинная</string>
    <string name="success_while_sending_quote_to_db">Новая цитата успешно создана</string>
    <string name="error_while_sending_quote_to_db">При создании цитаты произошла ошибка</string>
    <string name="error_while_download_quotes">Произошла ошибка при загрузке цитат</string>
    <string name="not_fully_necessary">Заполните всю необходимую информацию</string>
    <string name="unknown_error">Произошла неизваестная ошибка</string>
    <string name="user_parcelable_key">userParcelable</string>
    <string name="remove">Удалить</string>
    <string name="removing_quote_success">Цитата была умпешно удалена</string>
    <string name="removing_quote_error">Произошла ошибка во время удаления цитаты</string>

    <!-- Shared Preferences -->
    <string name="preferences_name">storyLineSharedPreferences</string>
    <string name="preferences_last_book">lastBook</string>
    <string name="preferences_date_of_last_reading">dateOfLastReading</string>
    <string name="exit_from_account_message">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="user_does_not_interesting">У вас остутсвуют предпочтения</string>
    <string name="passwords_are_not_same">Пароли не совпадают</string>

    <!-- Login Layout -->
    <string name="login_title">Вход</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_sign_in_text">Войти</string>
    <string name="login_create_account_hint">Нет аккаунта?</string>
    <string name="login_create_account_text">Зарегитрироваться</string>

    <!-- Register Layout -->
    <string name="register_title">Регистрация</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Пароль</string>
    <string name="register_repeat_password_hint">Повторите пароль</string>
    <string name="register_create_account_text">Создать аккаунт</string>
    <string name="register_create_account_hint">Уже есть аккаунт?</string>
    <string name="register_sign_in_text">Войти</string>

    <!-- Registration Details Layout -->
    <string name="details_title">Почти готово…</string>
    <string name="details_name_hint">Как вас зовут?</string>
    <string name="details_interests_title">Что вам интересно?</string>
    <string name="details_next_text">Далее</string>

    <!-- Profile Layout -->
    <string name="profile_quotes_title">Мои цитаты</string>
    <string name="there_are_not_suitable_story_message">К сожалению, на данный момент, истории, подходящие вашим предпочтениям закончились. Желаете ли вы изменить предпочтения или же подождете ближайшего обновления?</string>
    <string name="change_interests_message">Поменяю интересы</string>
    <string name="wait">Подожду</string>
</resources>
